--- a/client/src/app/home/components/message-create-rv/message-create-rv.component.html
+++ b/client/src/app/home/components/message-create-rv/message-create-rv.component.html
@@ -5,7 +5,7 @@
         <p>
           ¿Tuviste las mejores vacaciones de tu vida? ¿Quieres que todos conozcan donde se consiguen las pizzas más ricas? Crea una ruta de viaje ahora y dala a conocer al mundo.
         </p>
-        <a class="btn btn-material btn-success" (click)="goToCreateRV()" role="button">
+        <a (click)="router($event)" href="/new" class="btn btn-material btn-success" role="button">
           <i class="fa fa-plane" aria-hidden="true"></i>Crear viaje
         </a>
       </section>
