--- a/client/src/app/search/search.component.html
+++ b/client/src/app/search/search.component.html
@@ -9,12 +9,12 @@
 
       <ul class="nav nav-tabs" role="tablist">
         <li role="presentation" class="active">
-          <a href="#rutas" (click)="changeTab($event)">
+          <a (click)="changeTab($event)" href="#rutas">
             <i class="fa fa-plane" aria-hidden="true"></i>Rutas de viajes <span class="badge">7</span>
           </a>
         </li>
         <li role="presentation">
-          <a href="#usuarios" (click)="changeTab($event)">
+          <a (click)="changeTab($event)" href="#usuarios">
             <i class="fa fa-user-circle-o" aria-hidden="true"></i>Usuarios <span class="badge">8</span>
           </a>
         </li>
