--- a/client/src/app/shared/components/checkbox-user/checkbox-user.component.html
+++ b/client/src/app/shared/components/checkbox-user/checkbox-user.component.html
@@ -1,10 +1,10 @@
-<div class="checkbox-user shadow" (click)="checkUser($event)">
+<div (click)="checkUser($event)" [ngClass]="classCheckbox()">
   <div class="background">
     <div class="wrapper-checkbox">
       <img class="user-picture" src="http://localhost:8080/images/usuario/1.jpg">
       <img class="check" src="assets/img/success.svg">
     </div>
-    <div class="user-info" href="#">
+    <div class="user-info">
       <div class="username-nombre">
         <strong class="user-nombre">Jon Snow</strong>
         <span class="username">@test</span>
