--- a/client/src/app/shared/components/navbar/components/notification-item/notification-item.component.html
+++ b/client/src/app/shared/components/navbar/components/notification-item/notification-item.component.html
@@ -1,11 +1,11 @@
 <li class="item">
   <div class="item-border">
     <div class="profile-picture">
-      <img src="https://lh4.googleusercontent.com/-WHb2PGFg70g/AAAAAAAAAAI/AAAAAAAABjw/7u-wl0m3vZA/photo.jpg">
+      <img src="http://localhost:8080/images/usuario/2.jpg">
     </div>
 
     <!-- Cuando alguien te sigue. -->
-    <div [hidden]="!seguido" class="details seguido">
+    <div *ngIf="seguido" class="details seguido">
       <span class="title">
         <a class="username" href="#">@juanbono94</a> te sigue
       </span>
@@ -14,7 +14,7 @@
     </div>
 
     <!-- Cuando marcan como favorito una RV. -->
-    <div [hidden]="!favorito" class="details favorito">
+    <div *ngIf="favorito" class="details favorito">
       <span class="title">
         <a class="username" href="#">@juanbono94</a> marcó favorita tu <a href="#">ruta de viaje</a>
       </span>
@@ -23,7 +23,7 @@
     </div>
 
     <!-- Cuando comentan una RV. -->
-    <div [hidden]="!comentado" class="details comentado">
+    <div *ngIf="comentado" class="details comentado">
       <span class="title">
         <a class="username" href="#">@juanbono94</a> comentó tu <a href="#">ruta de viaje</a>
       </span>
@@ -31,8 +31,8 @@
       <span class="date">05:20 AM</span>
     </div>
 
-      <!-- Cuando comparten una RV. -->
-    <div [hidden]="!compartido" class="details compartido">
+    <!-- Cuando comparten una RV. -->
+    <div *ngIf="compartido" class="details compartido">
       <span class="title">
         <a class="username" href="#">@juanbono94</a> compartió tu <a href="#">ruta de viaje</a>
       </span>
