--- a/client/src/app/welcome/components/navbar-welcome/navbar-welcome.component.css
+++ b/client/src/app/welcome/components/navbar-welcome/navbar-welcome.component.css
@@ -6,7 +6,7 @@
 .navbar {
   box-shadow: 0 1px 4px rgba(0, 0, 0, 0.3), 0 0 40px rgba(0, 0, 0, 0.1) inset;
   font-family: Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
-  background-color: #337ab7;
+  background-color: #4C5151;
   width: 100%;
   border-radius: 0;
   border-width: 0;
