--- a/client/src/app/welcome/welcome.component.html
+++ b/client/src/app/welcome/welcome.component.html
@@ -66,13 +66,13 @@
           <li>
             <a href="https://www.facebook.com/pg/apollocom-238918739899778" class="btn btn-default btn-lg">
               <i class="fa fa-facebook fa-fw"></i>
-              <span class="network-name">facebook</span>
+              <span class="network-name">Facebook</span>
             </a>
           </li>
           <li>
             <a href="#" class="btn btn-default btn-lg">
               <i class="fa fa-twitter fa-fw"></i>
-              <span class="network-name">twitter</span>
+              <span class="network-name">Twitter</span>
             </a>
           </li>
           <li>
