--- a/client/src/app/shared/components/navbar/navbar.component.html
+++ b/client/src/app/shared/components/navbar/navbar.component.html
@@ -12,41 +12,18 @@
       <apollo-navbar-logo></apollo-navbar-logo>
     </div>
 
-    <div [hidden]="!search" id="search" class="navbar-form navbar-left">
+    <div *ngIf="search" id="search" class="navbar-form navbar-left hidden-sm hidden-xs">
       <div class="form-group">
         <input type="text" class="form-control" placeholder="Búsqueda">
       </div>
       <button type="submit" class="btn btn-default">
-        <span class="glyphicon glyphicon-search" aria-hidden="true"></span>
+        <i class="fa fa-search" aria-hidden="true"></i>
       </button>
     </div>
 
-    <div [hidden]="!dropdown" id="navbar-collapse" class="collapse navbar-collapse navbar-right navbar-main-collapse">
-      <apollo-notifications></apollo-notifications>
-
-      <ul class="nav navbar-nav navbar-right">
-        <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">
-            <i class="fa fa-caret-down" aria-hidden="true"></i>
-          </a>
-
-          <ul class="dropdown-menu" role="menu">
-            <li>
-              <a href="#">
-                <span class="glyphicon glyphicon-user"></span>Configuración
-              </a>
-            </li>
-
-            <li class="divider"></li>
-
-            <li>
-              <a (click)="logout()">
-                <span class="glyphicon glyphicon-log-out"></span>Salir
-              </a>
-            </li>
-          </ul>
-        </li>
-      </ul>
+    <div *ngIf="dropdown" id="navbar-collapse" class="collapse navbar-collapse navbar-right navbar-main-collapse">
+      <apollo-notification-dropdown></apollo-notification-dropdown>
+      <apollo-user-dropdown></apollo-user-dropdown>
     </div>
   </div>
 </nav>
