--- a/client/src/app/shared/components/preview-user/preview-user.component.html
+++ b/client/src/app/shared/components/preview-user/preview-user.component.html
@@ -3,8 +3,8 @@
     <div class="wrapper-picture">
       <img class="user-picture" src="http://localhost:8080/images/usuario/1.jpg">
     </div>
-    <div class="user-info" href="#">
-      <a href="#" class="username-nombre">
+    <div class="user-info">
+      <a (click)="router($event)" href="#" class="username-nombre">
         <strong class="user-nombre">Jon Snow</strong>
         <span class="username">@test</span>
       </a>
