--- a/client/src/app/shared/components/view-rv/view-rv.component.css
+++ b/client/src/app/shared/components/view-rv/view-rv.component.css
@@ -27,7 +27,7 @@
   background-color: #eaeaea;
 }
 
-.rv-map .googe-map {
+.rv-map .google-map {
   border-top: 1px solid #ccc;
   border-bottom: 1px solid #ccc;
   width: 100%;
