--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -1,10 +1,7 @@
 body {
   width: 100%;
   height: 100%;
-  background-size: cover;
-  background-image: url('assets/img/background.png');
-  background-repeat: no-repeat;
-  background-attachment: fixed;
+  background-color: #F3F8F7;
   font-family: Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
 }
 
@@ -50,11 +47,23 @@ button:focus {
 .loading {
   width: 100vw;
   height: 100vh;
-  color: #fff;
+  // color: #000;
+  color: #337ab7;
   font-size: 6rem;
   font-weight: 700;
   text-transform: uppercase;
   letter-spacing: 1px;
+}
+
+.link {
+  background: none;
+  border: none;
+  padding: 0;
+  text-align: left;
+}
+
+.shadow {
+  box-shadow: 0 1px 4px rgba(0, 0, 0, 0.3), 0 0 40px rgba(0, 0, 0, 0.1) inset;
 }
 
 /* Clases utilitarias */
@@ -81,10 +90,6 @@ button:focus {
 .pull-right-100 {
   float: right;
   width: 100%;
-}
-
-.shadow {
-  box-shadow: 0 1px 4px rgba(0, 0, 0, 0.3), 0 0 40px rgba(0, 0, 0, 0.1) inset;
 }
 
 /**
@@ -280,4 +285,49 @@ textarea {
 .btn-material[disabled] {
   opacity: .65;
   cursor: not-allowed;
+}
+
+/**
+ * Dropdowns
+ */
+.show-dropdown {
+  background: transparent;
+  border: none;
+  cursor: pointer;
+  margin: 0;
+  outline: none;
+  position: relative;
+  height: 50px;
+}
+
+.dropdown-menu {
+  top: 53px;
+}
+
+.dropdown-menu:before,
+.dropdown-menu:after {
+  border: 10px solid transparent;
+  content: '';
+  display: block;
+  height: 0;
+  right: 10px;
+  position: absolute;
+  width: 0;
+}
+
+.dropdown-menu:before {
+  border-bottom-color: rgba(0, 0, 0, 0.15);
+  top: -20px;
+}
+
+.dropdown-menu:after {
+  border-bottom-color: #fff;
+  top: -19px;
+}
+
+.dropdown-list {
+  list-style: none;
+  margin: 0;
+  overflow: hidden;
+  padding: 0;
 }
