--- a/client/src/app/shared/components/navbar-logo/navbar-logo.component.html
+++ b/client/src/app/shared/components/navbar-logo/navbar-logo.component.html
@@ -1,5 +1,5 @@
 <div class="navbar-header">
-  <a (click)="router($event)" class="navbar-brand" href="/home">
+  <a routerLink="/home" class="navbar-brand">
     <img alt="Apollo" src="assets/img/logo.png">
     <div class="titulo">Apollo</div>
   </a>
