--- a/client/src/app/shared/components/navbar/components/notification-dropdown/notification-dropdown.component.html
+++ b/client/src/app/shared/components/navbar/components/notification-dropdown/notification-dropdown.component.html
@@ -19,6 +19,6 @@
       <li class="item no-data">No tienes notificaciones sin leer</li>
     </ul>
 
-    <a (click)="router($event)" href="/notifications" class="show-all">Mostrar todas las notificaciones</a>
+    <a routerLink="/notifications" class="show-all">Mostrar todas las notificaciones</a>
   </div>
 </div>
