--- a/client/src/app/shared/components/view-rv/view-rv.component.html
+++ b/client/src/app/shared/components/view-rv/view-rv.component.html
@@ -17,7 +17,7 @@
               <img class="user-picture" src="{{post.creador.imagenUrl}}">
             </div>
 
-            <a (click)="router($event)" class="user-info" href="profile/{{post.creador.username}}">
+            <a routerLink="/profile/{{post.creador.username}}" class="user-info">
               <strong class="user-nombre">{{post.creador.nombre}} {{post.creador.apellido}}</strong>
               <span class="username">@{{post.creador.username}}</span>
             </a>
