--- a/client/src/app/shared/components/navbar/components/user-dropdown/user-dropdown.component.html
+++ b/client/src/app/shared/components/navbar/components/user-dropdown/user-dropdown.component.html
@@ -1,7 +1,7 @@
 <div class="dropdown user-dropdown">
   <button type="button" class="show-dropdown align-vertical" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
     <div class="user-picture">
-      <img src="http://localhost:8080/images/usuario/1.jpg">
+      <img src="{{user.imagenUrl}}">
     </div>
     <i class="fa fa-caret-down" aria-hidden="true"></i>
   </button>
@@ -9,13 +9,13 @@
   <div class="dropdown-menu" aria-labelledby="dropdown-button">
     <ul class="dropdown-list" role="menu">
       <li>
-        <a (click)="router($event)" class="link" href="/profile/test">
+        <a routerLink="/profile/{{user.username}}" class="link">
           <i class="fa fa-user" aria-hidden="true"></i>Perfil
         </a>
       </li>
 
       <li>
-        <a (click)="router($event)" class="link" href="/settings">
+        <a routerLink="/settings" class="link">
           <i class="fa fa-cogs" aria-hidden="true"></i>Configuración
         </a>
       </li>
